[package]
name = "oh-my-input"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
evdev = { git = "https://github.com/CBenoit/evdev", rev = "78ba4a69fb01ca389ac586691253716325f20ef4", version = "0.12.1", features = ["serde"] }
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
